# viva-academy-platform

./: .env.example  .gitignore  DB-NORMALIZATION-PLAN.md  README.md  package-lock.json  package.json  tsconfig.base.json  turbo.json
.github/workflows/: qa-release.yml
apps/api/: .env.example  Dockerfile  academy_os.db  main.py  nixpacks.toml  pyproject.toml  requirements.txt  vercel.json
apps/api/app/: auth.py  catalog_audit.py  config.py  course_catalog.py  db.py  integrations.py  main.py  models.py  rate_limit.py  schemas.py  store.py  v2_models.py
apps/api/app/data/: p01_curriculum.json
apps/api/app/routers/: academy.py  cron.py  health.py  v2_certificates.py
apps/web/: package.json  tsconfig.json
apps/web/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/components/: admin-bootstrap-panel.tsx  admin-branding-studio.tsx  admin-catalog-history.tsx  admin-certificate-manager.tsx  admin-launch-readiness.tsx  admin-lms-console.tsx  admin-test-editor.tsx  admin-trainer-invites.tsx  admin-trainer-review-workspace.tsx  admin-user-management.tsx  admin-video-chapters.tsx  admissions-workbench.tsx  certificate-view.tsx  chapter-rich-text.tsx  claude-home.tsx  (+27 more)
docs/: architecture.md  deployment.md
docs/product/: viva-academy-prd.md
infra/railway/: README.md
infra/vercel/: README.md
scripts/: README.md  provision-team-accounts.py  rotate-team-passwords.py
tests/qa-audit/: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
(+72 files in other folders)
