[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "academy-api"
version = "0.1.0"
description = "Standalone academy backend for VIVA and future white-label institutes."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "pydantic>=2.9.2",
  "python-dotenv>=1.0.1"
]

[tool.setuptools]
packages = ["app"]
